@@ -1,3 +1,8 @@
+2010-04-14	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* x86_display_cpu/.cvsignore, x86_display_cpu/Makefile,
+	x86_display_cpu/test.c: New files.
+
 2010-04-08	Joel Sherrill <joel.sherrilL@OARcorp.com>
 
 	* Makefile: Do not build adamain automatically until there is a way to
